<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_turn_back"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="飞奔的小蜗牛壳儿"
                android:textSize="@dimen/text_size_bigger"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:src="@mipmap/icon_user_detail_setting"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color_view_gray">
            <com.lgd.lgdthesis.view.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@mipmap/icon_user_advator"/>
            <com.lgd.lgdthesis.view.TextViewPlus
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:customFont="@string/font_bold"
                android:text="@string/user_detail_name"
                android:textSize="@dimen/text_size_biggist"
                android:layout_gravity="center_horizontal"
                />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="写了 3 篇文章"/>
                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="获得了 1 个喜欢"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_user_deatil_login_regist"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="登录/注册"
                android:textSize="@dimen/text_size_bigger"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_user_edit"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_edit"
                android:textSize="@dimen/text_size_big"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/color_view_green"
                android:padding="5dp"
                android:background="@drawable/shap_user_detail_edit"
                android:drawableLeft="@mipmap/icon_user_editer"
                android:layout_marginBottom="15dp"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <RadioGroup
                android:id="@+id/radioGroup_user_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_detail_dynamic"
                    android:textSize="@dimen/text_size_biggist"
                    android:gravity="center_vertical"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_detail_article"
                    android:layout_marginLeft="30dp"
                    android:textSize="@dimen/text_size_biggist"
                    android:gravity="center_vertical"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_detail_more"
                    android:layout_marginLeft="30dp"
                    android:textSize="@dimen/text_size_biggist"
                    android:gravity="center_vertical"/>
            </RadioGroup>

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_userdetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v4.view.ViewPager>

    </LinearLayout>
</layout>
