<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <com.lgd.lgdthesis.view.CircleImageView
            android:id="@+id/iv_friend_article_anvator"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/icon_user_advator"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.lgd.lgdthesis.view.TextViewPlus
                android:id="@+id/tv_friend_user_name"

                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:text="张士杰"
                android:textSize="@dimen/text_size_big"
                app:customFont="@string/font_bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <com.lgd.lgdthesis.view.TextViewPlus
                    android:id="@+id/tv_item_article_comment_flour"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9小时之前"
                    android:textSize="@dimen/text_size_small"
                    android:layout_marginLeft="5dp"
                    app:customFont="@string/font_palatino"
                    android:textColor="@color/colot_textview_dark"
                    android:layout_gravity="center_vertical"/>
                <com.lgd.lgdthesis.view.TextViewPlus
                    android:id="@+id/tv_article_time"
                    app:customFont="@string/font_palatino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9小时之前"
                    android:textSize="@dimen/text_size_small"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colot_textview_dark"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <com.lgd.lgdthesis.view.TextViewPlus
        android:id="@+id/tv_item_article_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:maxLength="35"
        app:customFont="@string/font_regular"
        android:maxLines="2"
        android:text="阿斯蒂芬立刻水阿什顿飞机ADSL计费 费阿萨德分阿斯蒂芬例会大师傅好阿斯蒂芬卡的福克斯的空间划分 "
        android:textSize="@dimen/text_size_biggist" />


</LinearLayout>