<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/ll_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_turn_back"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="羊羊羊羊阳"
                android:textSize="@dimen/text_size_bigger"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
        <FrameLayout
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/sw_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rc_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </android.support.v4.widget.SwipeRefreshLayout>

            <RelativeLayout
                android:id="@+id/layout_record"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:background="@drawable/chat_top_voice_bg"
                android:padding="10dp" >

                <ImageView
                    android:id="@+id/iv_record"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/action_settings"
                    android:src="@mipmap/chat_icon_voice1" />

                <TextView
                    android:id="@+id/tv_voice_tips"
                    style="@style/style_text_white"
                    android:layout_below="@id/iv_record"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/voice_up_tips"
                    android:textSize="14sp" />
            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:background="@drawable/base_comment_emo_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_5"
            android:paddingRight="@dimen/margin_5">

            <Button
                android:id="@+id/btn_chat_add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_chat_add_selector"
                android:gravity="center"
                android:onClick="onChatAddClick" />

            <Button
                android:id="@+id/btn_chat_emo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/btn_chat_emo_selector"
                android:gravity="center"
                android:onClick="onBtnChatEmo"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edit_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1.0"
                android:background="@drawable/drawable_edit_normal"
                android:gravity="left|center"
                android:hint="请输入新消息"
                android:imeOptions="flagNoExtractUi"
                android:lineSpacingExtra="@dimen/margin_3"
                android:minHeight="@dimen/height_40"
                android:padding="@dimen/margin_5"
                android:textColor="@color/color_1e1e1e"
                android:textColorHint="@color/color_b4"
                android:onClick="onEditMsg"
                android:textSize="@dimen/text_size_medium" />

            <Button
                android:id="@+id/btn_speak"
                style="@style/style_text_black"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_chat_record_selector"
                android:gravity="center"
                android:text="@string/longclick_speak"
                android:visibility="gone"></Button>

            <Button
                android:id="@+id/btn_chat_voice"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="6dp"
                android:background="@drawable/btn_chat_voice_selector"
                android:gravity="center"
                android:onClick="onBtnChatVoice"
                android:textColor="@color/base_color_text_black"></Button>

            <Button
                android:id="@+id/btn_chat_keyboard"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_chat_keyboard_selector"
                android:gravity="center"
                android:onClick="onChatKeyboard"
                android:textColor="@color/base_color_text_black"
                android:visibility="gone"></Button>

            <Button
                android:id="@+id/btn_chat_send"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:background="@drawable/btn_chat_send_selector"
                android:gravity="center"
                android:onClick="onBtnChatSend"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_emote_divder"
            android:focusable="false" />

        <LinearLayout
            android:id="@+id/layout_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/layout_emo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager_emo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <include
                android:id="@+id/layout_add"
                layout="@layout/include_chat_add"
                android:visibility="gone" />
        </LinearLayout>


    </LinearLayout>

</layout>
